test_low_check_base_file						=	files('check-base.c')
test_low_check_mcg_128_rxs_m_64_file			=	files('check-mcg-128-rxs-m-64.c')
test_low_check_mcg_128_xsh_rr_64_file			=	files('check-mcg-128-xsh-rr-64.c')
test_low_check_mcg_128_xsh_rs_64_file			=	files('check-mcg-128-xsh-rs-64.c')
test_low_check_mcg_128_xsl_rr_64_file			=	files('check-mcg-128-xsl-rr-64.c')
test_low_check_mcg_16_rxs_m_8_file				=	files('check-mcg-16-rxs-m-8.c')
test_low_check_mcg_16_xsh_rr_8_file				=	files('check-mcg-16-xsh-rr-8.c')
test_low_check_mcg_16_xsh_rs_8_file				=	files('check-mcg-16-xsh-rs-8.c')
test_low_check_mcg_32_rxs_m_16_file				=	files('check-mcg-32-rxs-m-16.c')
test_low_check_mcg_32_xsh_rr_16_file			=	files('check-mcg-32-xsh-rr-16.c')
test_low_check_mcg_32_xsh_rs_16_file			=	files('check-mcg-32-xsh-rs-16.c')
test_low_check_mcg_64_rxs_m_32_file				=	files('check-mcg-64-rxs-m-32.c')
test_low_check_mcg_64_xsh_rr_32_file			=	files('check-mcg-64-xsh-rr-32.c')
test_low_check_mcg_64_xsh_rs_32_file			=	files('check-mcg-64-xsh-rs-32.c')
test_low_check_mcg_64_xsl_rr_32_file			=	files('check-mcg-64-xsl-rr-32.c')
test_low_check_oneseq_128_rxs_m_64_file			=	files('check-oneseq-128-rxs-m-64.c')
test_low_check_oneseq_128_rxs_m_xs_128_file		=	files('check-oneseq-128-rxs-m-xs-128.c')
test_low_check_oneseq_128_xsh_rr_64_file		=	files('check-oneseq-128-xsh-rr-64.c')
test_low_check_oneseq_128_xsh_rs_64_file		=	files('check-oneseq-128-xsh-rs-64.c')
test_low_check_oneseq_128_xsl_rr_64_file		=	files('check-oneseq-128-xsl-rr-64.c')
test_low_check_oneseq_128_xsl_rr_rr_128_file	=	files('check-oneseq-128-xsl-rr-rr-128.c')
test_low_check_oneseq_16_rxs_m_8_file			=	files('check-oneseq-16-rxs-m-8.c')
test_low_check_oneseq_16_rxs_m_xs_16_file		=	files('check-oneseq-16-rxs-m-xs-16.c')
test_low_check_oneseq_16_xsh_rr_8_file			=	files('check-oneseq-16-xsh-rr-8.c')
test_low_check_oneseq_16_xsh_rs_8_file			=	files('check-oneseq-16-xsh-rs-8.c')
test_low_check_oneseq_32_rxs_m_16_file			=	files('check-oneseq-32-rxs-m-16.c')
test_low_check_oneseq_32_rxs_m_xs_32_file		=	files('check-oneseq-32-rxs-m-xs-32.c')
test_low_check_oneseq_32_xsh_rr_16_file			=	files('check-oneseq-32-xsh-rr-16.c')
test_low_check_oneseq_32_xsh_rs_16_file			=	files('check-oneseq-32-xsh-rs-16.c')
test_low_check_oneseq_64_rxs_m_32_file			=	files('check-oneseq-64-rxs-m-32.c')
test_low_check_oneseq_64_rxs_m_xs_64_file		=	files('check-oneseq-64-rxs-m-xs-64.c')
test_low_check_oneseq_64_xsh_rr_32_file			=	files('check-oneseq-64-xsh-rr-32.c')
test_low_check_oneseq_64_xsh_rs_32_file			=	files('check-oneseq-64-xsh-rs-32.c')
test_low_check_oneseq_64_xsl_rr_32_file			=	files('check-oneseq-64-xsl-rr-32.c')
test_low_check_oneseq_64_xsl_rr_rr_64_file		=	files('check-oneseq-64-xsl-rr-rr-64.c')
test_low_check_oneseq_8_rxs_m_xs_8_file			=	files('check-oneseq-8-rxs-m-xs-8.c')
test_low_check_setseq_128_rxs_m_64_file			=	files('check-setseq-128-rxs-m-64.c')
test_low_check_setseq_128_rxs_m_xs_128_file		=	files('check-setseq-128-rxs-m-xs-128.c')
test_low_check_setseq_128_xsh_rr_64_file		=	files('check-setseq-128-xsh-rr-64.c')
test_low_check_setseq_128_xsh_rs_64_file		=	files('check-setseq-128-xsh-rs-64.c')
test_low_check_setseq_128_xsl_rr_64_file		=	files('check-setseq-128-xsl-rr-64.c')
test_low_check_setseq_128_xsl_rr_rr_128_file	=	files('check-setseq-128-xsl-rr-rr-128.c')
test_low_check_setseq_16_rxs_m_8_file			=	files('check-setseq-16-rxs-m-8.c')
test_low_check_setseq_16_rxs_m_xs_16_file		=	files('check-setseq-16-rxs-m-xs-16.c')
test_low_check_setseq_16_xsh_rr_8_file			=	files('check-setseq-16-xsh-rr-8.c')
test_low_check_setseq_16_xsh_rs_8_file			=	files('check-setseq-16-xsh-rs-8.c')
test_low_check_setseq_32_rxs_m_16_file			=	files('check-setseq-32-rxs-m-16.c')
test_low_check_setseq_32_rxs_m_xs_32_file		=	files('check-setseq-32-rxs-m-xs-32.c')
test_low_check_setseq_32_xsh_rr_16_file			=	files('check-setseq-32-xsh-rr-16.c')
test_low_check_setseq_32_xsh_rs_16_file			=	files('check-setseq-32-xsh-rs-16.c')
test_low_check_setseq_64_rxs_m_32_file			=	files('check-setseq-64-rxs-m-32.c')
test_low_check_setseq_64_rxs_m_xs_64_file		=	files('check-setseq-64-rxs-m-xs-64.c')
test_low_check_setseq_64_xsh_rr_32_file			=	files('check-setseq-64-xsh-rr-32.c')
test_low_check_setseq_64_xsh_rs_32_file			=	files('check-setseq-64-xsh-rs-32.c')
test_low_check_setseq_64_xsl_rr_32_file			=	files('check-setseq-64-xsl-rr-32.c')
test_low_check_setseq_64_xsl_rr_rr_64_file		=	files('check-setseq-64-xsl-rr-rr-64.c')
test_low_check_setseq_8_rxs_m_xs_8_file			=	files('check-setseq-8-rxs-m-xs-8.c')
test_low_check_unique_128_rxs_m_64_file			=	files('check-unique-128-rxs-m-64.c')
test_low_check_unique_128_rxs_m_xs_128_file		=	files('check-unique-128-rxs-m-xs-128.c')
test_low_check_unique_128_xsh_rr_64_file		=	files('check-unique-128-xsh-rr-64.c')
test_low_check_unique_128_xsh_rs_64_file		=	files('check-unique-128-xsh-rs-64.c')
test_low_check_unique_128_xsl_rr_64_file		=	files('check-unique-128-xsl-rr-64.c')
test_low_check_unique_128_xsl_rr_rr_128_file	=	files('check-unique-128-xsl-rr-rr-128.c')
test_low_check_unique_16_rxs_m_8_file			=	files('check-unique-16-rxs-m-8.c')
test_low_check_unique_16_rxs_m_xs_16_file		=	files('check-unique-16-rxs-m-xs-16.c')
test_low_check_unique_16_xsh_rr_8_file			=	files('check-unique-16-xsh-rr-8.c')
test_low_check_unique_16_xsh_rs_8_file			=	files('check-unique-16-xsh-rs-8.c')
test_low_check_unique_32_rxs_m_16_file			=	files('check-unique-32-rxs-m-16.c')
test_low_check_unique_32_rxs_m_xs_32_file		=	files('check-unique-32-rxs-m-xs-32.c')
test_low_check_unique_32_xsh_rr_16_file			=	files('check-unique-32-xsh-rr-16.c')
test_low_check_unique_32_xsh_rs_16_file			=	files('check-unique-32-xsh-rs-16.c')
test_low_check_unique_64_rxs_m_32_file			=	files('check-unique-64-rxs-m-32.c')
test_low_check_unique_64_rxs_m_xs_64_file		=	files('check-unique-64-rxs-m-xs-64.c')
test_low_check_unique_64_xsh_rr_32_file			=	files('check-unique-64-xsh-rr-32.c')
test_low_check_unique_64_xsh_rs_32_file			=	files('check-unique-64-xsh-rs-32.c')
test_low_check_unique_64_xsl_rr_32_file			=	files('check-unique-64-xsl-rr-32.c')
test_low_check_unique_64_xsl_rr_rr_64_file		=	files('check-unique-64-xsl-rr-rr-64.c')

test_low_check_base_exe							=	executable('check-base', [test_low_check_base_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_128_rxs_m_64_exe				=	executable('check-mcg-128-rxs-m-64', [test_low_check_mcg_128_rxs_m_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_128_xsh_rr_64_exe			=	executable('check-mcg-128-xsh-rr-64', [test_low_check_mcg_128_xsh_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_128_xsh_rs_64_exe			=	executable('check-mcg-128-xsh-rs-64', [test_low_check_mcg_128_xsh_rs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_128_xsl_rr_64_exe			=	executable('check-mcg-128-xsl-rr-64', [test_low_check_mcg_128_xsl_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_16_rxs_m_8_exe				=	executable('check-mcg-16-rxs-m-8', [test_low_check_mcg_16_rxs_m_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_16_xsh_rr_8_exe				=	executable('check-mcg-16-xsh-rr-8', [test_low_check_mcg_16_xsh_rr_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_16_xsh_rs_8_exe				=	executable('check-mcg-16-xsh-rs-8', [test_low_check_mcg_16_xsh_rs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_32_rxs_m_16_exe				=	executable('check-mcg-32-rxs-m-16', [test_low_check_mcg_32_rxs_m_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_32_xsh_rr_16_exe				=	executable('check-mcg-32-xsh-rr-16', [test_low_check_mcg_32_xsh_rr_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_32_xsh_rs_16_exe				=	executable('check-mcg-32-xsh-rs-16', [test_low_check_mcg_32_xsh_rs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_64_rxs_m_32_exe				=	executable('check-mcg-64-rxs-m-32', [test_low_check_mcg_64_rxs_m_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_64_xsh_rr_32_exe				=	executable('check-mcg-64-xsh-rr-32', [test_low_check_mcg_64_xsh_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_64_xsh_rs_32_exe				=	executable('check-mcg-64-xsh-rs-32', [test_low_check_mcg_64_xsh_rs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_mcg_64_xsl_rr_32_exe				=	executable('check-mcg-64-xsl-rr-32', [test_low_check_mcg_64_xsl_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_rxs_m_64_exe			=	executable('check-oneseq-128-rxs-m-64', [test_low_check_oneseq_128_rxs_m_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_rxs_m_xs_128_exe		=	executable('check-oneseq-128-rxs-m-xs-128', [test_low_check_oneseq_128_rxs_m_xs_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_xsh_rr_64_exe			=	executable('check-oneseq-128-xsh-rr-64', [test_low_check_oneseq_128_xsh_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_xsh_rs_64_exe			=	executable('check-oneseq-128-xsh-rs-64', [test_low_check_oneseq_128_xsh_rs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_xsl_rr_64_exe			=	executable('check-oneseq-128-xsl-rr-64', [test_low_check_oneseq_128_xsl_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_128_xsl_rr_rr_128_exe		=	executable('check-oneseq-128-xsl-rr-rr-128', [test_low_check_oneseq_128_xsl_rr_rr_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_16_rxs_m_8_exe			=	executable('check-oneseq-16-rxs-m-8', [test_low_check_oneseq_16_rxs_m_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_16_rxs_m_xs_16_exe		=	executable('check-oneseq-16-rxs-m-xs-16', [test_low_check_oneseq_16_rxs_m_xs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_16_xsh_rr_8_exe			=	executable('check-oneseq-16-xsh-rr-8', [test_low_check_oneseq_16_xsh_rr_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_16_xsh_rs_8_exe			=	executable('check-oneseq-16-xsh-rs-8', [test_low_check_oneseq_16_xsh_rs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_32_rxs_m_16_exe			=	executable('check-oneseq-32-rxs-m-16', [test_low_check_oneseq_32_rxs_m_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_32_rxs_m_xs_32_exe		=	executable('check-oneseq-32-rxs-m-xs-32', [test_low_check_oneseq_32_rxs_m_xs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_32_xsh_rr_16_exe			=	executable('check-oneseq-32-xsh-rr-16', [test_low_check_oneseq_32_xsh_rr_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_32_xsh_rs_16_exe			=	executable('check-oneseq-32-xsh-rs-16', [test_low_check_oneseq_32_xsh_rs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_rxs_m_32_exe			=	executable('check-oneseq-64-rxs-m-32', [test_low_check_oneseq_64_rxs_m_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_rxs_m_xs_64_exe		=	executable('check-oneseq-64-rxs-m-xs-64', [test_low_check_oneseq_64_rxs_m_xs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_xsh_rr_32_exe			=	executable('check-oneseq-64-xsh-rr-32', [test_low_check_oneseq_64_xsh_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_xsh_rs_32_exe			=	executable('check-oneseq-64-xsh-rs-32', [test_low_check_oneseq_64_xsh_rs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_xsl_rr_32_exe			=	executable('check-oneseq-64-xsl-rr-32', [test_low_check_oneseq_64_xsl_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_64_xsl_rr_rr_64_exe		=	executable('check-oneseq-64-xsl-rr-rr-64', [test_low_check_oneseq_64_xsl_rr_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_oneseq_8_rxs_m_xs_8_exe			=	executable('check-oneseq-8-rxs-m-xs-8', [test_low_check_oneseq_8_rxs_m_xs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_rxs_m_64_exe			=	executable('check-setseq-128-rxs-m-64', [test_low_check_setseq_128_rxs_m_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_rxs_m_xs_128_exe		=	executable('check-setseq-128-rxs-m-xs-128', [test_low_check_setseq_128_rxs_m_xs_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_xsh_rr_64_exe			=	executable('check-setseq-128-xsh-rr-64', [test_low_check_setseq_128_xsh_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_xsh_rs_64_exe			=	executable('check-setseq-128-xsh-rs-64', [test_low_check_setseq_128_xsh_rs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_xsl_rr_64_exe			=	executable('check-setseq-128-xsl-rr-64', [test_low_check_setseq_128_xsl_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_128_xsl_rr_rr_128_exe		=	executable('check-setseq-128-xsl-rr-rr-128', [test_low_check_setseq_128_xsl_rr_rr_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_16_rxs_m_8_exe			=	executable('check-setseq-16-rxs-m-8', [test_low_check_setseq_16_rxs_m_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_16_rxs_m_xs_16_exe		=	executable('check-setseq-16-rxs-m-xs-16', [test_low_check_setseq_16_rxs_m_xs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_16_xsh_rr_8_exe			=	executable('check-setseq-16-xsh-rr-8', [test_low_check_setseq_16_xsh_rr_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_16_xsh_rs_8_exe			=	executable('check-setseq-16-xsh-rs-8', [test_low_check_setseq_16_xsh_rs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_32_rxs_m_16_exe			=	executable('check-setseq-32-rxs-m-16', [test_low_check_setseq_32_rxs_m_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_32_rxs_m_xs_32_exe		=	executable('check-setseq-32-rxs-m-xs-32', [test_low_check_setseq_32_rxs_m_xs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_32_xsh_rr_16_exe			=	executable('check-setseq-32-xsh-rr-16', [test_low_check_setseq_32_xsh_rr_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_32_xsh_rs_16_exe			=	executable('check-setseq-32-xsh-rs-16', [test_low_check_setseq_32_xsh_rs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_rxs_m_32_exe			=	executable('check-setseq-64-rxs-m-32', [test_low_check_setseq_64_rxs_m_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_rxs_m_xs_64_exe		=	executable('check-setseq-64-rxs-m-xs-64', [test_low_check_setseq_64_rxs_m_xs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_xsh_rr_32_exe			=	executable('check-setseq-64-xsh-rr-32', [test_low_check_setseq_64_xsh_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_xsh_rs_32_exe			=	executable('check-setseq-64-xsh-rs-32', [test_low_check_setseq_64_xsh_rs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_xsl_rr_32_exe			=	executable('check-setseq-64-xsl-rr-32', [test_low_check_setseq_64_xsl_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_64_xsl_rr_rr_64_exe		=	executable('check-setseq-64-xsl-rr-rr-64', [test_low_check_setseq_64_xsl_rr_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_setseq_8_rxs_m_xs_8_exe			=	executable('check-setseq-8-rxs-m-xs-8', [test_low_check_setseq_8_rxs_m_xs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_rxs_m_64_exe			=	executable('check-unique-128-rxs-m-64', [test_low_check_unique_128_rxs_m_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_rxs_m_xs_128_exe		=	executable('check-unique-128-rxs-m-xs-128', [test_low_check_unique_128_rxs_m_xs_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_xsh_rr_64_exe			=	executable('check-unique-128-xsh-rr-64', [test_low_check_unique_128_xsh_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_xsh_rs_64_exe			=	executable('check-unique-128-xsh-rs-64', [test_low_check_unique_128_xsh_rs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_xsl_rr_64_exe			=	executable('check-unique-128-xsl-rr-64', [test_low_check_unique_128_xsl_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_128_xsl_rr_rr_128_exe		=	executable('check-unique-128-xsl-rr-rr-128', [test_low_check_unique_128_xsl_rr_rr_128_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_16_rxs_m_8_exe			=	executable('check-unique-16-rxs-m-8', [test_low_check_unique_16_rxs_m_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_16_rxs_m_xs_16_exe		=	executable('check-unique-16-rxs-m-xs-16', [test_low_check_unique_16_rxs_m_xs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_16_xsh_rr_8_exe			=	executable('check-unique-16-xsh-rr-8', [test_low_check_unique_16_xsh_rr_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_16_xsh_rs_8_exe			=	executable('check-unique-16-xsh-rs-8', [test_low_check_unique_16_xsh_rs_8_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_32_rxs_m_16_exe			=	executable('check-unique-32-rxs-m-16', [test_low_check_unique_32_rxs_m_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_32_rxs_m_xs_32_exe		=	executable('check-unique-32-rxs-m-xs-32', [test_low_check_unique_32_rxs_m_xs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_32_xsh_rr_16_exe			=	executable('check-unique-32-xsh-rr-16', [test_low_check_unique_32_xsh_rr_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_32_xsh_rs_16_exe			=	executable('check-unique-32-xsh-rs-16', [test_low_check_unique_32_xsh_rs_16_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_rxs_m_32_exe			=	executable('check-unique-64-rxs-m-32', [test_low_check_unique_64_rxs_m_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_rxs_m_xs_64_exe		=	executable('check-unique-64-rxs-m-xs-64', [test_low_check_unique_64_rxs_m_xs_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_xsh_rr_32_exe			=	executable('check-unique-64-xsh-rr-32', [test_low_check_unique_64_xsh_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_xsh_rs_32_exe			=	executable('check-unique-64-xsh-rs-32', [test_low_check_unique_64_xsh_rs_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_xsl_rr_32_exe			=	executable('check-unique-64-xsl-rr-32', [test_low_check_unique_64_xsl_rr_32_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
test_low_check_unique_64_xsl_rr_rr_64_exe		=	executable('check-unique-64-xsl-rr-rr-64', [test_low_check_unique_64_xsl_rr_rr_64_file, extras_entropy_file]
												  , include_directories : [include_include, include_extras]
												  , c_args : '-Wall -pedantic'
												  , link_width : [libpcg_random_a])
